[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolpulse"
version = "0.1.0"
description = "Agent tool reliability monitoring — one-line decorator for any tool, with schema drift detection and synthetic health checks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ToolPulse" }]
keywords = ["llm", "agent", "monitoring", "observability", "mcp", "langchain", "openai", "anthropic", "schema-drift"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "ruff>=0.5"]

[project.urls]
Homepage = "https://toolpulse.io"
Documentation = "https://toolpulse.io/docs"
Repository = "https://github.com/toolpulse/toolpulse"
Issues = "https://github.com/toolpulse/toolpulse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["toolpulse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
